--- a/src/components/NoteCard/NoteCard.css
+++ b/src/components/NoteCard/NoteCard.css
@@ -5,7 +5,9 @@ body {
 }
 
 .card-container {
-  width: 320px;
+  margin: 10px;
+  margin-top: 30px;
+  max-width: 330px;
   background: #ffffff;
   border: 4px solid #000000;
   box-shadow: 8px 8px 0 #000;
@@ -28,6 +30,7 @@ body {
 }
 
 .btn {
+  font-family: "Space Mono", monospace;
   margin-top: 20px;
   display: inline-block;
   padding: 10px 20px;
