--- a/src/components/NoteCard/NoteCard.css
+++ b/src/components/NoteCard/NoteCard.css
@@ -1,12 +1,13 @@
 body {
-  margin: 0;
-  padding: 0;
-  background: #fefefe;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
 }
 
 .card-container {
   margin: 10px;
-  margin-top: 30px;
+  margin-top: 20px;
   max-width: 330px;
   background: #ffffff;
   border: 4px solid #000000;
@@ -15,7 +16,7 @@ body {
 }
 
 .inner-container {
-  padding: 60px 20px 30px;
+  padding: 5px 20px 30px;
   text-align: center;
 }
 
